--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-altgraph @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
+altgraph
 blinker==1.7.0
 certifi==2023.7.22
 charset-normalizer==3.3.2
@@ -8,14 +8,14 @@ emoji==2.11.0
 filelock==3.12.3
 Flask==3.0.2
 Flask-Cors==4.0.0
-future @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
+future
 gunicorn==21.2.0
 idna==3.4
 importlib_metadata==7.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 joblib==1.3.2
-macholib @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
+macholib
 MarkupSafe==2.1.5
 nltk==3.8.1
 numpy==1.26.4
@@ -26,7 +26,7 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 regex==2023.12.25
 requests==2.31.0
-six @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
+six
 tqdm==4.66.2
 typing_extensions==4.7.1
 tzdata==2024.1
