--- a/frontend/dashboard/package.json
+++ b/frontend/dashboard/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@next/third-parties": "^14.2.7",
     "@remixicon/react": "^4.2.0",
     "@tremor/react": "^3.14.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.22",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.1.0",
+    "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2"
